--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
     font-family: "Outfit", sans-serif;
     color: hsl(30, 10%, 34%);
     background-color: hsl(30, 54%, 90%);
-
+    
     --heading-font: "Young Serif", serif;
     --heading-font-color: hsl(24, 5%, 18%);
     --hightlight-color: hsl(14, 45%, 36%);
@@ -55,7 +55,8 @@ ol li::marker  {
 
 .container {
     width: min(100%,735px);
-    margin: 0 auto;
+    margin: 0 auto 2rem;
+    padding-bottom: 2rem;
     letter-spacing: .5; 
     background-color: hsl(0, 0%, 100%);
 }
